fix navbar overflow onto scroll bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html {
 
 html, body {
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -21,7 +21,7 @@ body {
 .main-section {
   padding: 80px 30px 0;
   transition: 0.3s;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .btn.focus,
